--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -1,4 +1,5 @@
 ;@forward '/sass/layout/navigation';
 @forward '/sass/layout/hero';
 @forward '/sass/layout/selectors';
+@forward '/sass/layout/modal';
 
