--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,8 @@
 
 @use './layout/navigation' as *;
 @use './layout/hero' as *;
-@use './layout/_selectors.scss' as *;
+@use './layout/selectors.scss' as *;
+@use './layout/modal.scss' as *;
 
 
 
