added media queries

--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -3,3 +3,6 @@ $black: #000000;
 $grey-200: #1e2222;
 $grey-100: #d3d3d3;
 $grey-300: #242526;
+
+// Gradient for hamburger lines copied from inspecting the website
+$hamburger-gradient: linear-gradient(102.57deg, #dc0916, #f41fd6 100%, #f41fd6);
