--- a/sass/abstracts/_media-queries.scss
+++ b/sass/abstracts/_media-queries.scss
@@ -3,22 +3,12 @@
 @use './colors' as *;
 @use './mixins' as *;
 
-$breakpoint-xl: 1200px;
-$breakpoint-lg: 992px;
-$breakpoint-md: 768px;
+$breakpoint-md: 1344px;
 $breakpoint-sm: 576px;
-$breakpoint-xs: 480px;
+
 
 @mixin media_query($breakpoint) {
-  @if $breakpoint == 'xl' {
-    @media (max-width: $breakpoint-xl) {
-      @content;
-    }
-  } @else if $breakpoint == 'lg' {
-    @media (max-width: $breakpoint-lg) {
-      @content;
-    }
-  } @else if $breakpoint == 'md' {
+  @if $breakpoint == 'md' {
     @media (max-width: $breakpoint-md) {
       @content;
     }
@@ -26,9 +16,5 @@ $breakpoint-xs: 480px;
     @media (max-width: $breakpoint-sm) {
       @content;
     }
-  } @else if $breakpoint == 'xs' {
-    @media (max-width: $breakpoint-xs) {
-      @content;
-    }
-  }
+  } 
 }
