--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -7,6 +7,15 @@
 
 .pages {
   background-color: $grey-200;
+  padding-top: px_to_rem(120px);
+
+  @include media_query('md') {
+    padding-top: px_to_rem(100px);
+  }
+
+  @include media_query('sm') {
+    padding-top: px_to_rem(88px);
+  }
 }
 
 .card {
@@ -59,6 +68,32 @@
       height: 100%;
       object-fit: cover;
       display: block;
+    }
+  }
+
+  @include media_query('md') {
+    padding: px_to_rem(24px) px_to_rem(24px);
+    gap: px_to_rem(16px);
+    justify-content: flex-start;
+    align-items: flex-start;
+    border-bottom: 1px solid rgba($grey-100, 0.15);
+
+    &_image {
+      flex: 0 0 px_to_rem(180px);
+      height: px_to_rem(140px);
+    }
+
+    &__title {
+      font-size: px_to_rem(18px);
+      margin-bottom: px_to_rem(4px);
+    }
+
+    &__description {
+      display: none;
+    }
+
+    &__content {
+      gap: px_to_rem(4px);
     }
   }
 }
