--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -57,8 +57,7 @@
           color: $white;
           font-size: px_to_rem(16px);
           font-weight: 500;
-          letter-spacing: 0.02em;
-          padding: px_to_rem(8px) 0;
+          // padding: px_to_rem(8px) 0;
           display: inline-block;
           border-bottom: 2px solid transparent;
           transition: color .15s ease, border-bottom-color .15s ease;
