--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -302,12 +302,15 @@
       background-color: $grey-300;
       z-index: 1000;
       transform: translateX(-100%);
-      transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1);
+      transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1), visibility 0s 0.35s;
       padding: px_to_rem(80px) px_to_rem(24px) px_to_rem(32px);
       overflow-y: auto;
+      visibility: hidden;
 
       &.is-open {
         transform: translateX(0);
+        visibility: visible;
+        transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1), visibility 0s;
       }
 
       &-list {
