--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -5,4 +5,4 @@ $grey-100: #d3d3d3;
 $grey-300: #242526;
 
 // Gradient for hamburger lines copied from inspecting the website
-$hamburger-gradient: linear-gradient(102.57deg, #dc0916, #f41fd6 100%, #f41fd6);
+$gradient: linear-gradient(102.57deg, #dc0916, #f41fd6 100%, #f41fd6);
